--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,22 @@
 {
     "name": "lmerotta/phpokeapi",
-    "description": "A PHP7.1 Wrapper for PokéAPI, with cache and lazy-loading",
+    "description": "A PHP8.0 Wrapper for PokéAPI, with cache and lazy-loading",
     "type": "library",
     "require": {
-        "php": "^7.1.3",
+        "php": "^8.0",
         "ocramius/proxy-manager": "^2.1",
         "psr/cache": "^1.0",
         "psr/simple-cache": "^1.0",
         "symfony/cache": "^4.0",
         "doctrine/common": "^2.8",
-        "jms/serializer": "^1.11",
+        "jms/serializer": "^3.8",
         "symfony/yaml": "^4.0"
     },
     "license": "MIT",
     "authors": [
         {
-            "name": "Lucio Merotta",
-            "email": "l.merotta@gmail.com"
+            "name": "John Malayny",
+            "email": "john.malayny@gmail.com"
         }
     ],
     "autoload": {
@@ -27,6 +27,6 @@
     },
     "minimum-stability": "stable",
     "require-dev": {
-        "phpunit/phpunit": "^7.2"
+        "phpunit/phpunit": "^9.5"
     }
 }
